--- a/1.html
+++ b/1.html
@@ -15,5 +15,20 @@
 <p><a href="https://html.spec.whatwg.org/#toc-introduction" target="_blank" title="html5 specification">1Hypertext Mark up Language</a> (HTML) is the standard mark up language for <strong>creating <u>web</u> pages</strong> and web applications. Web broesers receieve HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
 <p><img src="coding.jpg" width="100"></p>
 <p style="margin-top:45px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page.It provides a means to create structured documents by denoting structual semantics for text such as heading, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.</p>
+<p>
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/6668472b981b6c56477bed93/1i03lc0hv';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+</p>
 </body>
 </html>
